--- a/src/components/CreateSong/CreateSong.css
+++ b/src/components/CreateSong/CreateSong.css
@@ -1,9 +1,9 @@
-input[type=text], select {
+input[type=text], select, input {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(204, 56, 56);
     border-radius: 4px;
     box-sizing: border-box;
   }
