Created Status bar and styling.

--- a/src/components/DisplayAllSongs/DisplayAllSongs.css
+++ b/src/components/DisplayAllSongs/DisplayAllSongs.css
@@ -1,11 +1,14 @@
 .table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 40%;
+    background-color: bisque
   }
   
 .th {
-    border: 1px solid #dddddd;
+    border: 1px solid #d89140;
     text-align: left;
     padding: 8px;
+    background-color: bisque;
+    width: 15%;
   }
