--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,8 @@
 .header{
-    background-color: beige;
+    text-align: right;    
+    background-color: coral;
+    color: cornsilk;      
+    padding: 60px;
+    margin: 0;
+    
 }
