--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
-    background-color: #282c34;
-    color: white;
+    background-color: #777a81f6;
+    color: rgb(10, 10, 10);
     padding: 40px;
-    font-family: Sans-Serif;
+    font-family: Sans-Serif;    
     text-align: center;
+
+    
   }
