--- a/src/components/CreateSong/CreateSong.css
+++ b/src/components/CreateSong/CreateSong.css
@@ -11,7 +11,7 @@ input[type=text], select, input {
 input[type=submit] {
     width: 20%;
     background-color: #4CAF50;
-    color: white;
+    color: rgb(155, 56, 56);
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -22,3 +22,5 @@ input[type=submit] {
 input[type=submit]:hover {
     background-color: #45a049;
   }
+
+  
